<resources>
    <string name="app_name">FindAnonTelecom</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-1882113672777118/9141828983</string>
    <string name="title_activity_ad">adActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="tag_location">Tag Location</string>
    <string name="find_nearest">Nearest Option</string>
    <string name="tag_street_view">Tag St. View</string>
    <string name="show_street_view">St. View</string>
    <string name="tag_no_location">Untag</string>
    <string name="tag_cancel">Cancel</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_maps">Map</string>
    <string name="please_turn_on_gps">Please turn on your location service.</string>
    <string name="title_activity_gmaps">Map</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_street_view">StreetView</string>
    <string name="navigate_to_another_panorama">navigate to another panorama</string>
    <string name="pan_camera">pan camera</string>
    <string name="tap_screen">tap screen</string>
    <string name="long_press_screen">long press screen</string>
</resources>
