<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_below="@+id/container_toolbar"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="bldg5.jj.findpayphones.MapsActivity" />

    <LinearLayout
        android:id="@+id/locationMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pin" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="@drawable/button_custom"
        style="@style/ButtonText"
        android:text="@string/tag_location" />

    <!-- These two buttons toggle -->
    <Button
        android:id="@+id/btnNearest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:background="@drawable/button_custom"
        style="@style/ButtonText"
        android:text="@string/find_nearest" />

    <ImageButton
        android:id="@+id/btnNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:visibility="invisible"
        android:src="@drawable/ic_share_white_24dp"
        android:background="@drawable/button_custom"
        android:layout_above="@id/btnNearest"
        style="@style/ButtonText" />

    <FrameLayout
        android:id="@+id/pinSelected"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_custom_cancel"
            style="@style/ButtonText"
            android:text="@string/tag_cancel" />

        <Button
            android:id="@+id/btnGetStreetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_custom"
            style="@style/ButtonText"
            android:text="@string/show_street_view" />

        <Button
            android:id="@+id/btnNoLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_custom"
            style="@style/ButtonText"
            android:text="@string/tag_no_location" />
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_gravity="top|right">
    </com.google.android.gms.ads.AdView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminateTint="@android:color/holo_blue_dark"
        android:id="@+id/progressBar"
        android:background ="@drawable/progress" />
</FrameLayout>
